--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -24,8 +24,8 @@
                           <p><%= f.select :tipoCliente, options_for_select([['PF', 'Pessoa Física'], ['PJ', 'Pessoa Jurídica'], ['UP', 'Uso Próprio']]) %></p>
                         </div>
                         <div class="col-md-6">
-                          <%= f.label :tipoAtendimento, "Tipo de Atendimento", class: "form-label" %>
-                          <%= f.select :tipoAtendimento, options_for_select([['rural', 'Rural'], ['urbano', 'Urbano']]) %>
+                          <p><%= f.label :tipoAtendimento, "Tipo de Atendimento", class: "form-label" %></p>
+                          <p><%= f.select :tipoAtendimento, options_for_select([['rural', 'Rural'], ['urbano', 'Urbano']]) %></p>
                         </div>
                       </div>
 
