--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -48,7 +48,7 @@
                      <div class="row mb-3">
                        <div class="col-md-6">
                           <p><%= f.label :tipoProduto, "Tipo de Produto", class: "form-label" %></p>
-                          <p><%= f.select :tipoproduto, options_for_select([['Internet', 'Internet'], ['Linha_dedicada', 'Linha_dedicada'], ['m2m', 'm2m'], ['outros', 'outros']]) %></p>
+                          <p><%= f.select :tipoProduto, options_for_select([['Internet', 'Internet'], ['Linha_dedicada', 'Linha_dedicada'], ['m2m', 'm2m'], ['outros', 'outros']]) %></p>
                        </div>
                        <div class="col-md-6">
                                <p><%= f.label :velocidade, "Velocidade", class: "form-label" %></p>
