--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -58,8 +58,8 @@
 
                      <div class="row mb-3">
                        <div class="col-md-6">
-                          <p><%= f.label :quantidade, "Quantidade", class: "form-label" %></p>
-                          <p><%= f.text_field :quantidade, class: "form-control", id: "quantidade", placeholder: "Digite a quantidade" %></p>
+                          <p><%= f.label :quantidadeAcesso, "Quantidade", class: "form-label" %></p>
+                          <p><%= f.text_field :quantidadeAcesso, class: "form-control", id: "quantidadeAcesso", placeholder: "Digite a quantidade" %></p>
                        </div>
                        <div class="col-md-6">
                           <p><%= f.label :codigoIbge, "Código IBGE", class: "form-label" %></p>
