--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -62,8 +62,8 @@
                           <p><%= f.text_field :quantidadeAcesso, class: "form-control", id: "quantidadeAcesso", placeholder: "Digite a quantidade" %></p>
                        </div>
                        <div class="col-md-6">
-                          <p><%= f.label :codigoIbge, "Código IBGE", class: "form-label" %></p>
-                          <p><%= f.text_field :codigoIbge, class: "form-control", id: "codigoIbge", placeholder: "Código IBGE" %></p>
+                          <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
+                          <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE" %></p>
                        </div>
                      </div>
                <% end %>
