--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -2,7 +2,7 @@
 
 <h3><strong>Fazer coleta</strong></h3>
 
-       
+       <div class="card-body">
               <%= form_for @coleta, url: coleta_mensal_atualizar_path do |f| %>
                     <div class="box-title">SCM</div>
                        <div class="box-description">Coleta de dados de acessos:
@@ -68,8 +68,8 @@
                      </div>
                <% end %>
 
+  </div>
 </div>
-
 
 
 
