--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -107,7 +107,38 @@
                     <td><%= coleta.status %></td>
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
-                    <td><a href="/cliente/mensal?id_projeto=<%= @organizacao.idProject %>" class="btn btn-sm btn-custom">Criar coleta</a> </td>
+                    <% if coleta.dataRealizacao.nil? %>
+                            <td><a href="#" class="btn btn-sm btn-custom">Aguardando dados da coleta...</a> </td>
+                    <% else %>
+                        <% if coleta.dataInformacaoEnvio.nil? %>
+                                <% if coleta.tituloColeta == 'Coleta Mensal' %>
+                                  <td> <a href="/coleta/mensal/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
+                                  <br /><a href="/coleta/mensal/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
+                                  <br /><a href="/coleta/mensal/informarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
+                                <% end %>
+                                <% if coleta.tituloColeta == 'Coleta Semestral' %>
+                                  <td> <a href="/coleta/semestral/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
+                                  <br /><a href="/coleta/semestral/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
+                                  <br /><a href="/coleta/semestral/informarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
+                                <% end %>
+                                <% if coleta.tituloColeta == 'Coleta Anual' %>
+                                  <td> <a href="/coleta/anual/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> 
+                                  <br /><a href="/coleta/anual/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">GERAR CSV</a> 
+                                  <br /><a href="/coleta/anual/informarEnvio?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Informar Envio</a> </td>
+                                <% end %>
+                        <% else %>
+                                <% if coleta.tituloColeta == 'Coleta Mensal' %>
+                                  <td> <a href="/coleta/mensal/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a> </td>
+                                <% end %>
+                                <% if coleta.tituloColeta == 'Coleta Semestral' %>
+                                  <td> <a href="/coleta/semestral/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a>  </td>
+                                <% end %>
+                                <% if coleta.tituloColeta == 'Coleta Anual' %>
+                                  <td> <a href="/coleta/anual/visualizar?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Ver coleta</a>  </td>
+                                <% end %>
+                        <% end %>
+                    <% end %>
+
                 </tr>
                 <% end %>
             </tbody>
