--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -1,9 +1,9 @@
  <div class="container mt-5">
-
+<h3><strong>Fazer coleta</strong></h3>
 
        <div class="card-body">
               <%= form_for @coleta, url: coleta_mensal_atualizar_path do |f| %>
-                    <div class="box-title">Fazer coleta/div>
+                    <div class="box-title">SCM</div>
                        <div class="box-description">Coleta de dados de acessos:
                          
                        <div class="row mb-3">
