--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -65,7 +65,9 @@
                           <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Código IBGE" %></p>
                        </div>
                      </div>
-                   <%= button_tag 'Adicionar', type: 'submit', class: 'btn btn-primary' %>
+          
+                     <%= f.submit "Adicionar", class:" btn btn-primary" %>
+
 
 
                <% end %>
