--- a/app/views/coleta/mensalfazer.html.erb
+++ b/app/views/coleta/mensalfazer.html.erb
@@ -2,7 +2,7 @@
 <h3><strong>Fazer coleta</strong></h3>
 
        <div class="card-body">
-              <%= form_for @coleta, url: coleta_mensalatualizar_path do |f| %>
+              <%= form_for @coleta, url: coleta_update_path do |f| %>
                     <div class="box-title">SCM</div>
                        <div class="box-description">Coleta de dados de acessos:
                          
