--- a/app/views/coleta/mensalfazer.html.erb
+++ b/app/views/coleta/mensalfazer.html.erb
@@ -3,6 +3,8 @@
 
        <div class="card-body">
               <%= form_for @coleta, url: coleta_update_path do |f| %>
+                   <%= f.hidden_field :id_coleta, :value => @coleta.id %>
+
                     <div class="box-title">SCM</div>
                        <div class="box-description">Coleta de dados de acessos:
                          
