--- a/app/views/coleta/mensalfazer.html.erb
+++ b/app/views/coleta/mensalfazer.html.erb
@@ -2,7 +2,7 @@
 <h3><strong>Fazer coleta</strong></h3>
 
 <% if @coleta.tipoColeta == 'SCM' %>
-  <%= render "coleta/coleta_mensal_scm", referencias: referencias %>
+  <%= render "coleta/coleta_mensal_scm" %>
 <% end %>
 </div>
 
