--- a/app/views/coleta/mensalfazer.html.erb
+++ b/app/views/coleta/mensalfazer.html.erb
@@ -5,7 +5,7 @@
   <%= render "coleta/coleta_mensal_scm" %>
 <% end %>
 
-<% if @coleta.tipoColeta == 'TVPA' %>
+<% if @coleta.tipoColeta == 'TVpA' %>
   <%= render "coleta/coleta_mensal_tvpa" %>
 <% end %>
 </div>
