--- a/app/views/coleta/mensalfazer.html.erb
+++ b/app/views/coleta/mensalfazer.html.erb
@@ -8,6 +8,10 @@
 <% if @coleta.tipoColeta == 'TVpA' %>
   <%= render "coleta/coleta_mensal_tvpa" %>
 <% end %>
+
+<% if @coleta.tipoColeta == 'STFC' %>
+  <%= render "coleta/coleta_mensal_tvpa" %>
+<% end %>
 </div>
 
 
