--- a/app/views/analista/index_analista.html.erb
+++ b/app/views/analista/index_analista.html.erb
@@ -1,5 +1,5 @@
 <% if User.current.logged? %>
-  <% !@projects.empty? %>
+  <% if !@projects.empty? %>
      <h2><strong>Clientes do Analista</strong></h2>
       <div class="row justify-content-center">
        <% for project in @projects %>
