--- a/app/views/coleta/mensalvisualizar.html.erb
+++ b/app/views/coleta/mensalvisualizar.html.erb
@@ -1,3 +1,6 @@
+
+<p>UFs:</p><p>
 <% for uf in @ufs %>
-    <p>UF: <%= uf.sigla %> </p>
+     <%= uf.id %> - <%= uf.sigla %> - <%= uf.nome %> <br />
 <% end %>
+</p>
