--- a/app/views/coleta/mensalvisualizar.html.erb
+++ b/app/views/coleta/mensalvisualizar.html.erb
@@ -1,4 +1,30 @@
 
+
+
+    <%= form_for @coleta, url: coleta_mensalvisualizar_path do |f| %>
+         <%= f.hidden_field :id_coleta, :value => @coleta.id %>
+
+          <div class="box-title"><%= @coleta.tipoColeta %></div>
+             <div class="box-description">Coleta de dados de acessos:
+               
+             <div class="row mb-3">
+               <div class="col-md-6">
+                    <p><%= f.label :uf, "Selecione o Estado" %></p>
+                    <% listaSelectUf = [] %>
+                    <% for uf in @ufs %>
+                         <%= listaSelectUf << [uf.id, uf.sigla + " - " + uf.nome ] %>
+                    <% end %>
+
+
+                    <p><%= f.select :uf, options_for_select(listaSelectUf) {}, class:'form-select' %></p>
+               </div>
+               <div class="col-md-6">
+                     <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
+                     <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Digite a cidade" %></p>
+               </div>
+             </div>
+     <% end >
+
 <p>UFs:</p><p>
 <% for uf in @ufs %>
      <%= uf.id %> - <%= uf.sigla %> - <%= uf.nome %> <br />
