--- a/app/views/coleta/mensalvisualizar.html.erb
+++ b/app/views/coleta/mensalvisualizar.html.erb
@@ -23,7 +23,7 @@
                      <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Digite a cidade" %></p>
                </div>
              </div>
-     <% end >
+     <% end %>
 
 <p>UFs:</p><p>
 <% for uf in @ufs %>
