--- a/app/views/coleta/mensalvisualizar.html.erb
+++ b/app/views/coleta/mensalvisualizar.html.erb
@@ -2,7 +2,7 @@
 
 
     <%= form_for @coleta, url: coleta_mensalcidadesuf_path do |f| %>
-         <%= f.hidden_field :id_coleta, :value => @coleta.id %>
+         <%= f.hidden_field :id, :value => @coleta.id %>
 
           <div class="box-title"><%= @coleta.tipoColeta %></div>
              <div class="box-description">Coleta de dados de acessos:
